# bpf-trusted-program-c

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  compile_commands.json  flake.nix  package.nix  trust-filter  trust-filter-common.h  trust-filter.bpf.c  trust-filter.c  vmlinux.h
.github/workflows/: build.yml
